tests/should_fail/variant_qualified_unknown_enum.fit
enum IoError { NotFound, PermissionDenied }

fn get_error() -> IoError

fn check(e: IoError) -> () {
    match e {
        Garbage.NotFound => { () }
        PermissionDenied => { () }
    }
}
